@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Warn players of the end of resistance effects.
+Nicolas Weeger 2010-04-26
+
 Some unit tests for fix_object().
 Nicolas Weeger 2010-04-26
 
